# svs-raw-api

./: .gitignore  LICENSE  pyproject.toml  quick_api.py
data/: README.md
data/calibration/: calibration_data_test.json  calibration_data_test.npy
data/matrices/: calibration_matrix_test.npy
data/pp3_profiles/: NC_2025-02-21.pp3  roll_g0.9_ex0.3_g0.9_rolloff_ex0.3_MD_1759501672_full.jpg.pp3
experimental/: inspect_cal_data.py  quick_api.py  rawtherapee_pipeline.py  simple.py  wb_utils.py
scripts/: setup_exiftool.sh  update_or_create_issue.py  validate_rawtherapee.sh
src/: constants.py  data.py  pipeline.py  processing_utils.py  selection.py
src/archive/: image_process_enhanced.py  image_processor_api.py  process_with_rawtherapee_params.py  rawtherapee_parameter_sweep.py  rawtherapee_params.py
src/experimental/: rawtherapee_pipeline.py
src/svs_raw_api/: __init__.py  data.py  pipeline.py  processing_utils.py  selection.py
src/utils/: inspect_cal_data.py
