[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svs-raw-api"
version = "1.0.0"
description = "RAW image processing pipeline for SVS-Vistek shr661CXGE camera"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Matthew Kutugata", email = "mattkutugata@gmail.com"}
]
keywords = ["raw", "image-processing", "colorchecker", "camera", "svs-vistek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scipy>=1.11.0",
    "imageio>=2.31.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "numba>=0.58.0",
    "pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"